[build-system]
requires = [
    "dask==2022.1.0",
    "hidapi==0.12.0.post2",
    "numba==0.56.0",
    "numpy==1.21.5",
    "ome_types==0.2.9",
    "opencv_python==4.5.3.56",
    "pandas==1.3.3",
    "pydantic==1.8.2",
    "pyqode.python==2.12.1",
    "PyQt5==5.15.7",
    "pyqtgraph==0.12.2",
    "pyueye==4.90.0.0",
    "QDarkStyle==3.1",
    "scikit_image==0.18.3",
    "scikit_learn==1.1.3",
    "scipy==1.8.0",
    "setuptools==49.2.1",
    "tifffile==2022.2.2",
    "zarr==2.10.3",
]
build-backend = "setuptools.build_meta"