[build-system]
requires = [
    "dask==2022.1.0",
    "hidapi==0.12.0.post2",
    "numba==0.57.1",
    "numpy==1.24.4",
    "ome_types==0.2.9",
    "opencv_python==4.5.3.56",
    "pandas==1.3.3",
    "pydantic==1.8.2",
    "pyqode.python==2.12.1",
    "PyQt5==5.15.9",
    "pyqtgraph==0.12.2",
    "pyserial==3.5",
    "pyueye==4.96.952",
    "QDarkStyle==3.1",
    "scikit_image==0.18.3",
    "scikit_learn==1.1.3",
    "scipy==1.11.3",
    "setuptools==49.2.1",
    "tables==3.9.1",
    "tifffile==2022.2.2",
    "zarr==2.10.3",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-quotes
    "Q",
]
ignore=["SIM102", "SIM114"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"