[build-system]
requires = ["setuptools>=69.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-quotes
    "Q",
    # Numpy 2.0.1
    # "NPY201",
]
ignore=["SIM102", "SIM114"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"